# Local-Accessible-PDF-Toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  accessible-pdf-toolkit.spec  launcher.py  pyproject.toml  requirements.txt  setup.py
assets/: app_icon.icns
assets/branding/: color_palette.json
docs/: api-reference.md  installation.md  privacy-security.md  user-guide.md  wcag-compliance.md
src/accessible_pdf_toolkit/: __init__.py  main.py
src/accessible_pdf_toolkit/core/: __init__.py  ai_detection.py  ai_processor.py  audit_logger.py  document_profile.py  html_generator.py  ocr_engine.py  pdf_handler.py  report_generator.py  wcag_validator.py
src/accessible_pdf_toolkit/database/: __init__.py  encryption.py  models.py  queries.py
src/accessible_pdf_toolkit/gui/: __init__.py  dashboard.py  dashboard_panel.py  html_converter.py  login_dialog.py  main_window.py  pdf_viewer.py  settings.py  tag_editor.py
src/accessible_pdf_toolkit/gui/dialogs/: __init__.py  batch_dialog.py  guided_fix_wizard.py  privacy_warning_dialog.py  reading_order_editor.py  show_me_walkthrough.py
src/accessible_pdf_toolkit/gui/widgets/: __init__.py  accordion_section.py  ai_config_panel.py  ai_suggestions_panel.py  compliance_meter.py  enhanced_pdf_viewer.py  navigation_panel.py  pdf_preview.py  progress_tracker.py  tag_tree.py  tutorial_dialog.py
src/accessible_pdf_toolkit/utils/: __init__.py  constants.py  file_operations.py  logger.py  version_control.py
tests/: __init__.py  conftest.py  test_database.py  test_encryption.py  test_html_generator.py  test_wcag_validator.py
